<resources>
    <string name="app_name">Just Chat</string>
    <string name="need_an_account">Need an account?</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="account_settings">Account settings</string>
    <string name="all_users">All users</string>
    <string name="logout">Logout</string>
    <string name="staart_reg">Need an account?</string>
    <string name="display_name">Display Name</string>
    <string name="register">Register</string>
    <string name="create_acc">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_password">Show Password</string>
    <string name="account_status">Account Status</string>
    <string name="change_password">Change Password</string>
    <string name="remove_image">Remove Image</string>
    <string name="display_name">Display Name</string>
    <string name="message_text">Message text</string>
    <string name="time">00:00</string>
</resources>
